# google-slides-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  development_history.md  pyproject.toml
docs/: development_history.md  google-oauth-setup.md
examples/: .gitkeep
scripts/: get_token.py
src/google_slides_mcp/: __main__.py  config.py  server.py
src/google_slides_mcp/auth/: google_oauth.py  middleware.py
src/google_slides_mcp/services/: drive_service.py  slides_service.py
src/google_slides_mcp/tools/: __init__.py  creation.py  low_level.py  positioning.py  templates.py  utility.py
src/google_slides_mcp/utils/: colors.py  transforms.py  units.py
tests/: __init__.py  conftest.py
tests/test_utils/: test_colors.py  test_units.py
